# ConoSurf

./: README.md  _config.yml  index.html  index.md  params.json
ConoProbeConnector/: .gitignore  CMakeLists.txt  ConoProbeConnector.py  README.md
SlicerPointSetProcessing/: CMakeLists.txt  README.md
SlicerPointSetProcessing/Data/: ConoProbePoints.vtk  Points_Breast_phantom.vtp  SphereMode_IGT.vtk  SpherePoints_vtkVertexGlyphFilter.vtp
SlicerPointSetProcessing/PointSetProcessingCpp/: CMakeLists.txt  qSlicerPointSetProcessingCppModule.cxx  qSlicerPointSetProcessingCppModule.h  qSlicerPointSetProcessingCppModuleWidget.cxx  qSlicerPointSetProcessingCppModuleWidget.h
SlicerPointSetProcessing/PointSetProcessingCpp/Logic/: CMakeLists.txt  vtkSlicerPointSetProcessingCppLogic.cxx  vtkSlicerPointSetProcessingCppLogic.h
SlicerPointSetProcessing/PointSetProcessingCpp/Resources/: qSlicerPointSetProcessingCppModule.qrc
SlicerPointSetProcessing/PointSetProcessingCpp/Resources/UI/: qSlicerPointSetProcessingCppFooBarWidget.ui  qSlicerPointSetProcessingCppModuleWidget.ui
SlicerPointSetProcessing/PointSetProcessingCpp/Widgets/: CMakeLists.txt  qSlicerPointSetProcessingCppFooBarWidget.cxx  qSlicerPointSetProcessingCppFooBarWidget.h
SlicerPointSetProcessing/PointSetProcessingPy/: .gitignore  CMakeLists.txt  PointSetProcessingPy.py
_posts/: 2016-01-05-build-instructions.md  2016-01-05-welcome-to-jekyll.markdown  2016-01-06-acknowledgements.md  2016-01-06-biigoptitrack.md  2016-01-06-changelog.md  2016-01-06-conoprobeconnector.md  2016-01-06-contact.md  2016-01-06-license.md  (+5 more)
(+21 files in other folders)
